# cloth_sim

./: CMakeLists.txt  README.md  cloth.cpp  cloth.h  environment.cpp  environment.h  event_data.cpp  event_data.h  main.cpp  point.cpp  point.h  stick.cpp  stick.h
